feat: ajout du dashboard analytique et agregations mongodb